#139 - moved to jdk 17, workaround for Mac dmg build, replaced java modules to not end w/ crypto, removed beta labels for release